--- a/LocalizationManager/LocalizationManagerTool/MainWindow.xaml
+++ b/LocalizationManager/LocalizationManagerTool/MainWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocalizationManagerTool"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="TranslateManager" Height="450" Width="800">
     <Grid VerticalAlignment="Top" Margin="0,0,0,-1">
         <Menu VerticalAlignment="Top" Height="22">
             <MenuItem Header="File" Click="Button_Click"/>
-            <MenuItem Header="Ajouter une langue" Click="AddLanguageMenuItem_Click" />
+            <MenuItem Header="Add Languages" Click="AddLanguageMenuItem_Click" />
             <MenuItem Header="Export">
                 <MenuItem Header="Exporter CSV" Click="ExportCsvButton_Click"/>
                 <MenuItem Header="Exporter JSON" Click="ExportJsonButton_Click"/>
